kubernetes/namespace.yaml
# Kubernetes Namespace to logically group all resources for the notes app.

apiVersion: v1
kind: Namespace
metadata:
  name: notes-app
  labels:
    name: notes-app
