kubernetes/ingress.yaml
# Ingress resource for routing external traffic to backend and frontend services.
# Uses annotations for an AWS ALB Ingress.

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: notes-ingress
  namespace: notes-app
  annotations:
    kubernetes.io/ingress.class: alb
spec:
  rules:
    - http:
        paths:
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: notes-backend-service
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: notes-frontend-service
                port:
                  number: 3000
